--- a/preview_resume.html
+++ b/preview_resume.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>olive</title>
+    <title>预览简历</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <script src="js/resize.js"></script>
     <link rel="stylesheet" href="css/main.css">
+    <script src="js/icon.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -27,8 +28,210 @@
                 <h3><span class="mr30">男</span><span>28岁</span><span>(1989-8-26)</span></h3>
             </div>
         </div>
-        <div class="box_shadow radius10 bgfff">
-            <h1 class="tit_line f32 bold pr">基本信息</h1>
+        <div class="mlr30">
+            <!-- 基本信息 -->
+            <div class="user_con box_shadow radius10 bgfff mb">
+                <h1 class="tit_line f32 color bold pr">基本信息</h1>
+                <div class="head mlr ptb colorlight bor_b">
+                    <p><em class="f42 blue">李锦</em><span class="mlr30">男</span><span>28岁</span><span>(1989-8-26)</span></p>
+                    <p class="grey mt10">
+                        <span><svg aria-hidden="true"><use xlink:href="#icon-site"></use></svg>上海-浦东</span><span class="mlr30"><svg aria-hidden="true"><use xlink:href="#icon-date"></use></svg>5年</span><span><svg aria-hidden="true"><use xlink:href="#icon-edu"></use></svg>本科</span>
+                    </p>
+                </div>
+                <div class="body mlr ptb30 colorlight">
+                    <p flex><em>手机号码</em><span>138****5632</span></p>
+                    <p flex><em>邮　　箱</em><span>54123****@qq.cm</span></p>
+                    <p flex><em>开始工作时间</em><span>2012年</span></p>
+                    <p flex><em>户籍城市</em><span>北京</span></p>
+                    <p flex><em>婚姻状况</em><span>未婚</span></p>
+                </div>
+            </div>
+            <!-- 求职意向 -->
+            <div class="user_con box_shadow radius10 bgfff mb">
+                <h1 class="tit_line f32 color bold pr">求职意向</h1>
+                <div class="body mlr ptb30 colorlight pr">
+                    <p flex><em>工作地点</em><span>上海-浦东</span></p>
+                    <p flex><em>职位类别</em><span>金融/销售</span></p>
+                    <p flex><em>期望薪资</em><span>1.5~2万/月</span></p>
+                    <p flex><em>工作性质</em><span>全职</span></p>
+                    <p flex><em>求职状态</em><span>我目前处于离职状态，可立即上岗</span></p>
+                </div>
+            </div>
+            <!-- 教育背景 -->
+            <div class="user_con box_shadow radius10 bgfff mb">
+                <h1 class="tit_line f32 color bold pr mb30">教育背景</h1>
+                <ul class="body colorlight dot_item">
+                    <li>
+                        <svg class="icon_dot" aria-hidden="true">
+                            <use xlink:href="#icon-dot"></use>
+                        </svg>
+                        <p flex><em>学校名称</em><span>西安交通大学</span></p>
+                        <p flex><em>学　　历</em><span>本科</span></p>
+                        <p flex><em>专　　业</em><span>经济与金融</span></p>
+                        <p flex><em>入学时间</em><span>2008-9</span></p>
+                        <p flex><em>毕业时间</em><span>2012-6</span></p>
+                    </li>
+                    <li>
+                        <svg class="icon_dot" aria-hidden="true">
+                            <use xlink:href="#icon-dot"></use>
+                        </svg>
+                        <p flex><em>学校名称</em><span>西安交通大学</span></p>
+                        <p flex><em>学　　历</em><span>本科</span></p>
+                        <p flex><em>专　　业</em><span>经济与金融</span></p>
+                        <p flex><em>入学时间</em><span>2008-9</span></p>
+                        <p flex><em>毕业时间</em><span>2012-6</span></p>
+                    </li>
+                </ul>
+            </div>
+            <!-- 工作经验 -->
+            <div class="user_con box_shadow radius10 bgfff mb">
+                <h1 class="tit_line f32 color bold pr mb30">工作经验</h1>
+                <ul class="body colorlight dot_item pr">
+                    <li>
+                        <svg class="icon_dot" aria-hidden="true">
+                            <use xlink:href="#icon-dot"></use>
+                        </svg>
+                        <p flex><em>公司名称</em><span>上海宣和资产管理有限公司</span></p>
+                        <p flex><em>入职时间</em><span>2012-7</span></p>
+                        <p flex><em>离职时间</em><span>2014-3</span></p>
+                        <p flex><em>所在行业</em><span>基金/证券/期货/投资</span></p>
+                        <p flex><em>岗位名称</em><span>销售经理</span></p>
+                        <p flex><em>职位薪资</em><span>1~1.5万/月</span></p>
+                        <p flex><em>工作描述</em><span>公司销售任务</span></p>
+                    </li>
+                    <li>
+                        <svg class="icon_dot" aria-hidden="true">
+                            <use xlink:href="#icon-dot"></use>
+                        </svg>
+                        <p flex><em>公司名称</em><span>上海宣和资产管理有限公司</span></p>
+                        <p flex><em>入职时间</em><span>2012-7</span></p>
+                        <p flex><em>离职时间</em><span>2014-3</span></p>
+                        <p flex><em>所在行业</em><span>基金/证券/期货/投资</span></p>
+                        <p flex><em>岗位名称</em><span>销售经理</span></p>
+                        <p flex><em>职位薪资</em><span>1~1.5万/月</span></p>
+                        <p flex><em>工作描述</em><span>公司销售任务</span></p>
+                    </li>
+                </ul>
+            </div>
+            <!-- 项目经验 -->
+            <div class="user_con box_shadow radius10 bgfff mb">
+                <h1 class="tit_line f32 color bold pr mb30">工作经验</h1>
+                <ul class="body colorlight dot_item pr">
+                    <li>
+                        <svg class="icon_dot" aria-hidden="true">
+                            <use xlink:href="#icon-dot"></use>
+                        </svg>
+                        <p flex><em>项目名称</em><span>56985号项目</span></p>
+                        <p flex><em>开始时间</em><span>2012-7</span></p>
+                        <p flex><em>结束时间</em><span>2014-3</span></p>
+                        <p><em>项目描述</em></p>
+                        <div class="multiple_txt">
+                            <p>打开销售市场，负责工程总承包，作为项目总负责人，对整个项目资金、人员等进行全面协调管理。</p>
+                        </div>
+                        <p><em>责任描述</em></p>
+                        <div class="multiple_txt">
+                            <p> 1. 区域销售：上海、江苏，以当地市场为核心，开展多渠道、多网点销售模式，在区域内形成传统批发渠道、商超渠道、工程渠道为主体的销售模式，灵活运用现有资源展开推广促销活动，为代理商以及经销商带来了良性的运作过程。</p>
+                            <p>2. 商超主管：对上海市内百佳、大润发、好又多、世纪联华、卜蜂莲花、家乐福、人人乐等主流商超开发、销售、管理、培训、回款等开展工作，形成了统一形象与话术，机型差异销售等模式。</p>
+                            <p>3. 负责上海、江苏省两地的市场推广工作，费用管理、物料管理、方案策划、人员安排、开展跟进与监控、总结与提炼等</p>
+                        </div>
+                    </li>
+                    <li>
+                        <svg class="icon_dot" aria-hidden="true">
+                            <use xlink:href="#icon-dot"></use>
+                        </svg>
+                        <p flex><em>项目名称</em><span>56986号项目</span></p>
+                        <p flex><em>开始时间</em><span>2013-4</span></p>
+                        <p flex><em>结束时间</em><span>2013-11</span></p>
+                        <p><em>项目描述</em></p>
+                        <div class="multiple_txt">
+                            <p>打开销售市场，负责工程总承包。</p>
+                        </div>
+                        <p><em>责任描述</em></p>
+                        <div class="multiple_txt">
+                            <p> 区域销售：上海、江苏，以当地市场为核心，开展多渠道、多网点销售模式，在区域内形成传统批发渠道、商超渠道、工程渠道为主体的销售模式，灵活运用现有资源展开推广促销活动，为代理商以及经销商带来了良性的运作过程。</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <!-- 培训信息 -->
+            <div class="user_con box_shadow radius10 bgfff mb">
+                <h1 class="tit_line f32 color bold pr mb30">培训信息</h1>
+                <ul class="body colorlight dot_item pr">
+                    <li>
+                        <svg class="icon_dot" aria-hidden="true">
+                            <use xlink:href="#icon-dot"></use>
+                        </svg>
+                        <p flex><em>培训专业</em><span>销售顾问</span></p>
+                        <p flex><em>培训机构</em><span>达内时代科技集团有限公司</span></p>
+                        <p flex><em>培训地点</em><span>北京</span></p>
+                        <p flex><em>获取证书</em><span>基金/证券/期货/投资</span></p>
+                        <p flex><em>起止时间</em><span>2017-09~2017-11</span></p>
+                    </li>
+                </ul>
+            </div>
+            <!-- 语言能力 -->
+            <div class="user_con box_shadow radius10 bgfff mb">
+                <h1 class="tit_line f32 color bold pr mb30">语言能力</h1>
+                <ul class="body colorlight dot_item pr">
+                    <li>
+                        <svg class="icon_dot" aria-hidden="true">
+                            <use xlink:href="#icon-dot"></use>
+                        </svg>
+                        <p flex><em>语　　种</em><span>英语/English</span></p>
+                        <p flex><em>程　　度</em><span>精通</span></p>
+                    </li>
+                    <li>
+                        <svg class="icon_dot" aria-hidden="true">
+                            <use xlink:href="#icon-dot"></use>
+                        </svg>
+                        <p flex><em>语　　种</em><span>法语/Français</span></p>
+                        <p flex><em>程　　度</em><span>精通</span></p>
+                    </li>
+                    <li>
+                        <svg class="icon_dot" aria-hidden="true">
+                            <use xlink:href="#icon-dot"></use>
+                        </svg>
+                        <p flex><em>语　　种</em><span>泰语/ภาษาไทย</span></p>
+                        <p flex><em>程　　度</em><span>精通</span></p>
+                    </li>
+                </ul>
+            </div>
+            <!-- 获奖情况 -->
+            <div class="user_con box_shadow radius10 bgfff mb">
+                <h1 class="tit_line f32 color bold pr mb30">获奖情况</h1>
+                <ul class="body colorlight dot_item pr">
+                    <li>
+                        <svg class="icon_dot" aria-hidden="true">
+                            <use xlink:href="#icon-dot"></use>
+                        </svg>
+                        <p flex><em>奖　　项</em><span>优秀共产党员</span></p>
+                        <p flex><em>时　　间</em><span>2015-12</span></p>
+                    </li>
+                    <li>
+                        <svg class="icon_dot" aria-hidden="true">
+                            <use xlink:href="#icon-dot"></use>
+                        </svg>
+                        <p flex><em>奖　　项</em><span>大学生数学竞赛一等奖</span></p>
+                        <p flex><em>时　　间</em><span>2014-05</span></p>
+                    </li>
+                </ul>
+            </div>
+            <!-- 项目经验 -->
+            <div class="user_con box_shadow radius10 bgfff mb">
+                <h1 class="tit_line f32 color bold pr">工作经验</h1>
+                <div class="body mlr ptb30 colorlight pr">
+                    <div class="multiple_txt">
+                        <p> 1. 有多年带动销售团队的经历；
+                        </p>
+                        <p>2. 开发客户，报价、谈判及提供解决方案，并进行 后续跟进以完成公司下达的销售指标及其它项目工 作；
+                        </p>
+                        <p>3. 具有良好的表达能力和出色的公关能力, 具备良好 的团队合作精神，易于交流沟通；
+                        </p>
+                        <p>4. 有主动性， 积极性，吃苦耐劳，承受较大的工作 压力，勇于面对挑战。
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </article>
     <script src="js/jquery.min.js"></script>
