--- a/preview_resume.html
+++ b/preview_resume.html
@@ -217,7 +217,7 @@
                 </ul>
             </div>
             <!-- 项目经验 -->
-            <div class="user_con box_shadow radius10 bgfff mb">
+            <div class="user_con box_shadow radius10 bgfff mb30">
                 <h1 class="tit_line f32 color bold pr">工作经验</h1>
                 <div class="body mlr ptb30 colorlight pr">
                     <div class="multiple_txt">
